(coq.theory
 (name SGA)
 (modules Vect Common Environments Syntax
          Types TypedSyntax Circuits CircuitProperties Typechecking TypeInference
          Semantics SemanticProperties TypeSafety OneRuleAtATime CircuitCorrectness
          Primitives Interop Notations
          Demo Extraction
          Examples))
