(coq.theory
 (name SGA)
 (modules Vect FiniteType Common Member Environments IndexUtils Syntax
          Types TypedSyntax Circuits CircuitProperties TypeInference
          Semantics SemanticProperties OneRuleAtATime CircuitCorrectness
          Primitives Interop Notations
          Demo Extraction))
