(library
 (name registry)
 (public_name koika.registry)
 (modules registry)
 (libraries cuttlebone))

(executable
 (name cuttlec)
 (public_name cuttlec)
 (modules cuttlec)
 ; (modes byte)
 (preprocess (pps ppx_jane))
 (libraries str zarith dynlink core common cuttlebone frontends backends registry core_unix core_unix.command_unix core_unix.filename_unix))

(library
 (name interop)
 (public_name koika.interop)
 (modules interop)
 (libraries backends))

(library
 (name koika)
 (public_name koika)
 (modules koika)
 (libraries frontends backends cuttlebone interop registry))
