(library
 (name backends)
 (public_name koika.backends)
 (libraries str unix zarith common cuttlebone frontends))

(rule
 (deps gen.ml
       resources/cuttlesim.hpp resources/cuttlesim.cpp
       resources/verilator.hpp resources/verilator.cpp
       resources/Makefile)
 (targets resources.ml)
 (action (run ocaml str.cma gen.ml)))
