(library
 (name cuttlebone)
 (public_name koika.cuttlebone)
 (libraries common hashcons)
 (flags (:standard -w -39)))

;; (rule
;;  (targets "coq.ml" "coq.mli")
;;  (deps "../../coq/Extraction.vo")
;;  (action
;;   (progn
;;    (run cp "../../coq/extracted.ml" "./extr.ml")
;;    (run cp "../../coq/extracted.mli" "./extr.mli"))))
