(library
 (name cuttlebone)
 (public_name koika.cuttlebone)
 (libraries common hashcons)
 ;; -w -3 removes deprecation warnings; it should be changed to -alert
 ;; -deprecated when we drop support for OCaml 4.07.
 (flags (:standard -w -39 -w -3)))

;; (rule
;;  (targets "coq.ml" "coq.mli")
;;  (deps "../../coq/Extraction.vo")
;;  (action
;;   (progn
;;    (run cp "../../coq/extracted.ml" "./extr.ml")
;;    (run cp "../../coq/extracted.mli" "./extr.mli"))))
